Fix twitter icon spacing

--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -26,6 +26,6 @@ a {
 textarea {
 	resize: none;
 }
-.icon {
-	margin-right: 4px;
+.fa {
+	margin-right: 7px;
 }
